--- a/sales_report_product_image/views/report_saleorder.xml
+++ b/sales_report_product_image/views/report_saleorder.xml
@@ -4,23 +4,31 @@
     <template id="report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
         <xpath expr="//table[hasclass('o_main_table')]/thead/tr/th[1]" position="before">
             <t t-if="doc.print_image and doc.image_sizes in ('image', 'image_medium', 'image_small') ">
-                <th>Product Image</th>
+                <th>Imagen</th>
+            </t>
+            <t t-if="not doc.print_image and doc.image_sizes in ('image', 'image_medium', 'image_small') ">
+                <th>Codigo</th>
             </t>
         </xpath>
         <xpath expr="//table/tbody[hasclass('sale_tbody')]/t[2]/tr/t/td[1]" position="before">
             <t t-if="doc.image_sizes == 'image' and doc.print_image ">
                 <td>
-                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="width:95%;height:30%"/>
+                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="max-height: 150px;"/>
                 </td>
             </t>
             <t t-if="doc.image_sizes == 'image_medium' and doc.print_image">
                 <td>
-                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="width:95%;height:15%"/>
+                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="max-height: 100px;"/>
                 </td>
             </t>
             <t t-if="doc.image_sizes == 'image_small' and doc.print_image ">
                 <td>
-                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="width:95%;height:10%"/>
+                    <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}" style="max-height: 50px;"/>
+                </td>
+            </t>
+            <t t-if="not doc.print_image ">
+                <td>
+                    <span t-field="line.product_id.default_code"/>
                 </td>
             </t>
         </xpath>
