--- a/ht_product_disable_quick_create_/views/account_move_view.xml
+++ b/ht_product_disable_quick_create_/views/account_move_view.xml
@@ -8,7 +8,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//form/sheet/notebook/page/field[@name='invoice_line_ids']/tree/field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True, "no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
@@ -20,7 +20,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//form/sheet/notebook/page/field[@name='invoice_line_ids']/form/sheet/group/field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True, "no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
