--- a/ht_product_disable_quick_create_/views/stock_move_view.xml
+++ b/ht_product_disable_quick_create_/views/stock_move_view.xml
@@ -8,7 +8,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True,"no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
@@ -19,7 +19,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True,"no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
