--- a/ht_product_disable_quick_create_/views/stock_picking_view.xml
+++ b/ht_product_disable_quick_create_/views/stock_picking_view.xml
@@ -8,7 +8,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//form/sheet/notebook/page/field[@name='move_ids_without_package']/tree/field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True,"no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
@@ -20,7 +20,7 @@
                 <field name="arch" type="xml">
                     <xpath expr="//form/sheet/notebook/page/field[@name='move_ids_without_package']/form/group/field[@name='product_id']"
                         position="attributes">
-                        <attribute name="options">{"no_quick_create": True}</attribute>
+                        <attribute name="options">{"no_quick_create": True,"no_create": True}</attribute>
                     </xpath>
                 </field>
         </record>
