--- a/product_sale_stock_warning/views/product_template_view.xml
+++ b/product_sale_stock_warning/views/product_template_view.xml
@@ -7,8 +7,21 @@
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='options']//div[last()]" position="after">
                     <div>
-                        <field name="custom_check_onhand_qty"/>
+                        <field name="custom_check_onhand_qty" attrs="{'invisible':[('hide', '!=', True)]}"/>
                         <label for="custom_check_onhand_qty" string="Sales Order Alert"/>
+                        <field name="hide" invisible="1"/>
+                    </div>
+                </xpath>
+            </field>
+        </record>
+        <record id="product_template_form_view_inherit_is_check_no_stock" model="ir.ui.view">
+            <field name="name">product.template.form.inherit.check_no_stock</field>
+            <field name="model">res.users</field>
+            <field name="inherit_id" ref="base.view_users_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='action_id']" position="after">
+                    <div>
+                        <field name="check_no_stock"/>
                     </div>
                 </xpath>
             </field>
