--- a/product_sale_stock_warning/views/product_template_view.xml
+++ b/product_sale_stock_warning/views/product_template_view.xml
@@ -9,7 +9,7 @@
                     <div>
                         <field name="custom_check_onhand_qty" attrs="{'invisible':[('hide', '!=', True)]}"/>
                         <label for="custom_check_onhand_qty" string="Sales Order Alert"/>
-                        <field name="hide" invisible="1"/>
+                        <!-- <field name="hide" invisible="1"/> -->
                     </div>
                 </xpath>
             </field>
