--- a/product_sale_stock_warning/views/sale_order_view.xml
+++ b/product_sale_stock_warning/views/sale_order_view.xml
@@ -7,7 +7,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//form//sheet//notebook//page[@name='other_information']//field[@name='client_order_ref']" position="after">
                     <field name="custom_check_onhand_qty" attrs="{'invisible':[('hide', '!=', True)]}"/>
-                    <field name="hide" invisible="1"/>
+                    <!-- <field name="hide" invisible="1"/> -->
                 </xpath>
             </field>
         </record>
