--- a/product_sale_stock_warning/views/product_template_view.xml
+++ b/product_sale_stock_warning/views/product_template_view.xml
@@ -9,12 +9,12 @@
                     <div>
                         <field name="custom_check_onhand_qty" attrs="{'invisible':[('hide', '!=', True)]}"/>
                         <label for="custom_check_onhand_qty" string="Sales Order Alert"/>
-                        <!-- <field name="hide" invisible="1"/> -->
+                        <field name="hide" invisible="1"/>
                     </div>
                 </xpath>
             </field>
         </record>
-        <!-- <record id="product_template_form_view_inherit_is_check_no_stock" model="ir.ui.view">
+        <record id="product_template_form_view_inherit_is_check_no_stock" model="ir.ui.view">
             <field name="name">product.template.form.inherit.check_no_stock</field>
             <field name="model">res.users</field>
             <field name="inherit_id" ref="base.view_users_form"/>
@@ -25,6 +25,6 @@
                     </div>
                 </xpath>
             </field>
-        </record> -->
+        </record>
     </data>
 </odoo>
