--- a/product_sale_stock_warning/views/sale_order_view.xml
+++ b/product_sale_stock_warning/views/sale_order_view.xml
@@ -7,6 +7,15 @@
             <field name="arch" type="xml">
                 <xpath expr="//form//sheet//notebook//page[@name='other_information']//field[@name='client_order_ref']" position="after">
                     <field name="custom_check_onhand_qty" attrs="{'invisible':[('hide', '!=', True)]}"/>
+                </xpath>
+            </field>
+        </record>
+        <record id="view_order_form_inherit_is_hide" model="ir.ui.view">
+            <field name="name">sale.order.form.inherit.custom_check_onhand_qty</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//form//sheet//notebook//page[@name='other_information']//field[@name='client_order_ref']" position="before">
                     <field name="hide" invisible="1"/>
                 </xpath>
             </field>
