--- a/product_sale_stock_warning/views/product_template_view.xml
+++ b/product_sale_stock_warning/views/product_template_view.xml
@@ -21,7 +21,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='action_id']" position="after">
                     <div>
-                        <field name="check_no_stock" string="Venta sin Stock"/>
+                        <field name="check_no_stock"/>
+                        <label for="check_no_stock" string="Venta sin Stock"/>
                     </div>
                 </xpath>
             </field>
